@@ -25,6 +25,8 @@
   * revised FLAC playback subsystem
   * subtitles improvements - word wrap and new subtitle format variants
   * native MacOSX video and audio output plugins
+  * DXR3: fix slight shaking in lower third of the image on TV out
+    with some MPEG material
 
 xine-lib (1-rc4a)
   * audio out now uses a more user friendly "Speaker arrangement" config item;
